--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'Docker Certificate Installer'
 description: 'Install custom SSL/TLS certificates for Docker build environments'
-author: 'ravensorb'
+author: 'LiquidLogicLabs'
 
 branding:
   icon: 'shield'
