fix: Add git configuration to pre-release workflow
Configure git user for github-actions[bot] to fix identity error when creating tags

--- a/.github/workflows/ci-pre-release.yml
+++ b/.github/workflows/ci-pre-release.yml
@@ -112,6 +112,11 @@ jobs:
         with:
           fetch-depth: 0  # Need full history for changelog
       
+      - name: Configure git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+      
       - name: Generate version
         id: version
         run: |
