docs: correct repository name references to docker-ca-certificate-action
- Update all documentation to use correct repository name
- Fix GitHub Action references in examples and workflows
- Add repository field to package.json
- Ensure consistency across all documentation files

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.4",
   "description": "GitHub Action for installing custom SSL/TLS certificates",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LiquidLogicLabs/docker-ca-certificate-action.git"
+  },
   "scripts": {
     "release": "standard-version --release-as patch && git push --follow-tags origin HEAD",
     "release:patch": "standard-version --release-as patch && git push --follow-tags origin HEAD",
