--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -331,12 +331,10 @@ jobs:
           cat release-notes.md
       
       - name: Create GitHub Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ needs.detect-changes.outputs.tag-name }}
-          release_name: Release ${{ needs.detect-changes.outputs.tag-name }}
+          name: Release ${{ needs.detect-changes.outputs.tag-name }}
           body_path: release-notes.md
           draft: false
           prerelease: ${{ contains(needs.detect-changes.outputs.tag-name, '-') }}
