fix: correct output name in release job condition
- Change is-tag to is-tag-push to match the actual output name from detect-changes job
- This should fix the release job being skipped when tags are pushed

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -259,7 +259,7 @@ jobs:
   release:
     runs-on: ubuntu-22.04
     needs: [detect-changes, test, build]
-    if: ${{ needs.detect-changes.outputs.is-tag == 'true' && needs.build.result == 'success' }}
+    if: ${{ needs.detect-changes.outputs.is-tag-push == 'true' && needs.build.result == 'success' }}
     name: Create Release
     
     steps:
