feat: make BuildKit runtime configuration optional and configurable
- Add new 'buildkit-runtime' input parameter to action.yml
- Make runtime configuration conditional - only added when specified
- Update documentation in README.md and EXAMPLES.md
- Test both scenarios: with and without runtime configuration
- Improves flexibility for different container runtime environments
- Runtime config is no longer hardcoded, giving users control over their setup

--- a/action.yml
+++ b/action.yml
@@ -30,6 +30,11 @@ inputs:
     description: 'Generate buildkit.toml configuration file with CA certificate settings'
     required: false
     default: 'false'
+  
+  buildkit-runtime:
+    description: 'Container runtime for BuildKit (e.g., "io.containerd.runc.v2"). Leave empty to omit runtime configuration'
+    required: false
+    default: ''
 
 outputs:
   certificate-path:
@@ -57,4 +62,5 @@ runs:
         INPUT_CERTIFICATE_NAME: ${{ inputs.certificate-name }}
         INPUT_DEBUG: ${{ inputs.debug }}
         INPUT_GENERATE_BUILDKIT: ${{ inputs.generate-buildkit }}
+        INPUT_BUILDKIT_RUNTIME: ${{ inputs.buildkit-runtime }}
 
